--- a/P006638.opf/meta.yml
+++ b/P006638.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P006638
+id: P006638
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W15274
   title: ཚད་མ་རྣམ་འགྲེལ་རིགས་མཛོད་ཆེན་མོ
-  volume: ''
   author: ''
+  volumes: {}
