--- a/P006638.opf/layers/v001/Pagination.yml
+++ b/P006638.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 316f8e2260c94b9d9237da1ae880d646
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b06a36fab0544e8086b113b59ac737e2:
