--- a/P006638.opf/layers/v002/Pagination.yml
+++ b/P006638.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: d920f1b46cb44a96a4a5864a546a775e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ec4d01ca969d4ba7a28be70716e97b0c:
