--- a/P006638.opf/meta.yml
+++ b/P006638.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006638
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:12:08.720061
 source_metadata:
   id: bdr:W15274
   title: ཚད་མ་རྣམ་འགྲེལ་རིགས་མཛོད་ཆེན་མོ
@@ -19,3 +19,5 @@ source_metadata:
       volume_number: 2
       total_pages: 408
       base_file: v002.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
